Bug 221947 - Kjots: format painter doesn't seem to work
Summary: Kjots: format painter doesn't seem to work
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: 4.14.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-09 17:22 UTC by btuutp45
Modified: 2015-09-08 19:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch (untested) (561 bytes, patch)
2010-11-05 15:20 UTC, Anders Lund
Details

Note You need to log in before you can comment on or make changes to this bug.
Description btuutp45 2010-01-09 17:22:54 UTC
Version:           4.3.4 (using 4.3.4 (KDE 4.3.4), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.30-2-686

I've tried hightlighting some formated text (strikethrough, grey colored text) then clicking "format painter". I then highlight normal text and the format doesn't transfer. 

I've tried clicking format painter first, then highlighting the formatted text then highlighting the normal text and the format didn't transfer. 

I'm not sure if I'm not using the feature correctly, or if this is a bug.
Comment 1 Anders Lund 2010-11-05 15:20:42 UTC
Created attachment 53164 [details]
patch (untested)

According to docs, textCursor() returns a copy, so to apply changes you have to call setTextCursor(). I do not have a source build (netbook), but i assume this should work.
Comment 2 Allen Winter 2015-09-06 14:03:05 UTC
https://git.reviewboard.kde.org/r/125068/
Comment 3 Allen Winter 2015-09-08 19:07:19 UTC
Git commit 51da90df9eafaeefe4b2a4a24be3af2ae18df2f8 by Allen Winter.
Committed on 08/09/2015 at 19:05.
Pushed by winterz into branch 'KDE/4.14'.

krichtextwidget.cpp - fix format painter changes not taking effect.

REVIEW: 125068
MERGE: frameworks ktextwidgets

M  +6    -4    kdeui/widgets/krichtextwidget.cpp

http://commits.kde.org/kdelibs/51da90df9eafaeefe4b2a4a24be3af2ae18df2f8