krichtextwidget.cpp - fix format painter changes not taking effect.

REVIEW: 125068
BUG: 221947
MERGE: frameworks ktextwidgets